--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ obs-studio/.config/obs-studio/logs
 obs-studio/.config/obs-studio/profiler_data
 
 # OpenRGB
-OpenRGB/.config/logs
+OpenRGB/.config/OpenRGB/logs
 
 # Protonmail
 protonmail/.config/protonmail/bridge/cache
