--- a/vlc/.config/vlc/vlc-qt-interface.conf
+++ b/vlc/.config/vlc/vlc-qt-interface.conf
@@ -1,20 +1,16 @@
 [General]
-filedialog-path=@Variant(\0\0\0\x11\0\0\0\r/home/etorres)
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x10\0\0\x2\x98\0\0\x5\xf\0\0\x5\x9f\0\0\0\x10\0\0\x2\x98\0\0\x5\xf\0\0\x5\x9f\0\0\0\0\0\0\0\0\n\0\0\0\0\x10\0\0\x2\x98\0\0\x5\xf\0\0\x5\x9f)
+geometry = @ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x10\0\0\x2\x98\0\0\x5\xf\0\0\x5\x9f\0\0\0\x10\0\0\x2\x98\0\0\x5\xf\0\0\x5\x9f\0\0\0\0\0\0\0\0\n\0\0\0\0\x10\0\0\x2\x98\0\0\x5\xf\0\0\x5\x9f)
 
 [FullScreen]
-pos=@Point(0 0)
-screen=@Rect(0 0 0 0)
-wide=false
+pos = @Point(0 0)
+screen = @Rect(0 0 0 0)
+wide = false
 
 [MainWindow]
-adv-controls=0
-bgSize=@Size(600 364)
-pl-dock-status=true
-playlist-visible=false
-playlistSize=@Size(-1 -1)
-status-bar-visible=false
+adv-controls = 0
+bgSize = @Size(600 364)
+pl-dock-status = true
+playlist-visible = false
+playlistSize = @Size(-1 -1)
+status-bar-visible = false
 
-[RecentsMRL]
-list=file:///home/etorres/Pictures/./2016/07/16/IMG_7408.mov
-times=0
