--- a/obs-studio/.config/obs-studio/basic/profiles/Untitled/basic.ini
+++ b/obs-studio/.config/obs-studio/basic/profiles/Untitled/basic.ini
@@ -17,4 +17,22 @@ RecEncoder=x264
 RecQuality=Small
 
 [Output]
-Mode=Simple
+Mode=Advanced
+
+[AdvOut]
+Encoder=ffmpeg_vaapi
+TrackIndex=1
+RecType=Standard
+RecEncoder=ffmpeg_vaapi
+RecTracks=1
+FLVTrack=1
+FFOutputToFile=true
+FFFormat=
+FFFormatMimeType=
+FFIgnoreCompat=false
+FFVEncoderId=0
+FFVEncoder=
+FFAEncoderId=0
+FFAEncoder=
+FFAudioMixes=1
+VodTrackIndex=2
