--- a/vlc/.config/vlc/vlc-qt-interface.conf
+++ b/vlc/.config/vlc/vlc-qt-interface.conf
@@ -1,16 +1,24 @@
 [General]
-geometry = @ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x10\0\0\x2\x98\0\0\x5\xf\0\0\x5\x9f\0\0\0\x10\0\0\x2\x98\0\0\x5\xf\0\0\x5\x9f\0\0\0\0\0\0\0\0\n\0\0\0\0\x10\0\0\x2\x98\0\0\x5\xf\0\0\x5\x9f)
+filedialog-path=@Variant(\0\0\0\x11\0\0\0.file:///home/etorres/2022-06-15%2011-44-26.mkv)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x10\0\0\0\x30\0\0\t\xef\0\0\x5\x8f\0\0\0\x10\0\0\0\x30\0\0\t\xef\0\0\x5\x8f\0\0\0\0\0\0\0\0\n\0\0\0\0\x10\0\0\0\x30\0\0\t\xef\0\0\x5\x8f)
 
 [FullScreen]
-pos = @Point(0 0)
-screen = @Rect(0 0 0 0)
-wide = false
+pos=@Point(0 0)
+screen=@Rect(0 0 0 0)
+wide=false
 
 [MainWindow]
-adv-controls = 0
-bgSize = @Size(600 364)
-pl-dock-status = true
-playlist-visible = false
-playlistSize = @Size(-1 -1)
-status-bar-visible = false
+adv-controls=0
+bgSize=@Size(2528 1322)
+pl-dock-status=true
+playlist-visible=false
+playlistSize=@Size(-1 -1)
+status-bar-visible=false
 
+[OpenDialog]
+advanced=false
+size=@Size(528 460)
+
+[RecentsMRL]
+list=file:///home/etorres/2022-06-15%2011-44-26.mkv
+times=0
