Update config options for C++ formatting and run formatter

--- a/uncrustify/.config/uncrustify.conf
+++ b/uncrustify/.config/uncrustify.conf
@@ -76,15 +76,15 @@ utf8_force                      = false    # true/false
 
 # Add or remove space around non-assignment symbolic operators ('+', '/', '%',
 # '<<', and so forth).
-sp_arith                        = ignore   # ignore/add/remove/force/not_defined
+sp_arith                        = add   # ignore/add/remove/force/not_defined
 
 # Add or remove space around arithmetic operators '+' and '-'.
 #
 # Overrides sp_arith.
-sp_arith_additive               = ignore   # ignore/add/remove/force/not_defined
+sp_arith_additive               = add   # ignore/add/remove/force/not_defined
 
 # Add or remove space around assignment operator '=', '+=', etc.
-sp_assign                       = ignore   # ignore/add/remove/force/not_defined
+sp_assign                       = add   # ignore/add/remove/force/not_defined
 
 # Add or remove space around '=' in C++11 lambda capture specifications.
 #
@@ -174,10 +174,10 @@ sp_compare                      = ignore   # ignore/add/remove/force/not_defined
 sp_inside_paren                 = ignore   # ignore/add/remove/force/not_defined
 
 # Add or remove space between nested parentheses, i.e. '((' vs. ') )'.
-sp_paren_paren                  = ignore   # ignore/add/remove/force/not_defined
+sp_paren_paren                  = remove   # ignore/add/remove/force/not_defined
 
 # Add or remove space between back-to-back parentheses, i.e. ')(' vs. ') ('.
-sp_cparen_oparen                = ignore   # ignore/add/remove/force/not_defined
+sp_cparen_oparen                = add   # ignore/add/remove/force/not_defined
 
 # Whether to balance spaces inside nested parentheses.
 sp_balance_nested_parens        = false    # true/false
@@ -186,7 +186,7 @@ sp_balance_nested_parens        = false    # true/false
 sp_paren_brace                  = ignore   # ignore/add/remove/force/not_defined
 
 # Add or remove space between nested braces, i.e. '{{' vs. '{ {'.
-sp_brace_brace                  = ignore   # ignore/add/remove/force/not_defined
+sp_brace_brace                  = remove   # ignore/add/remove/force/not_defined
 
 # Add or remove space before pointer star '*'.
 sp_before_ptr_star              = ignore   # ignore/add/remove/force/not_defined
@@ -196,18 +196,18 @@ sp_before_ptr_star              = ignore   # ignore/add/remove/force/not_defined
 sp_before_unnamed_ptr_star      = ignore   # ignore/add/remove/force/not_defined
 
 # Add or remove space between pointer stars '*', as in 'int ***a;'.
-sp_between_ptr_star             = ignore   # ignore/add/remove/force/not_defined
+sp_between_ptr_star             = remove   # ignore/add/remove/force/not_defined
 
 # Add or remove space after pointer star '*', if followed by a word.
 #
 # Overrides sp_type_func.
-sp_after_ptr_star               = ignore   # ignore/add/remove/force/not_defined
+sp_after_ptr_star               = remove   # ignore/add/remove/force/not_defined
 
 # Add or remove space after pointer caret '^', if followed by a word.
 sp_after_ptr_block_caret        = ignore   # ignore/add/remove/force/not_defined
 
 # Add or remove space after pointer star '*', if followed by a qualifier.
-sp_after_ptr_star_qualifier     = ignore   # ignore/add/remove/force/not_defined
+sp_after_ptr_star_qualifier     = remove   # ignore/add/remove/force/not_defined
 
 # Add or remove space after a pointer star '*', if followed by a function
 # prototype or function definition.
@@ -240,7 +240,7 @@ sp_before_ptr_star_func         = ignore   # ignore/add/remove/force/not_defined
 sp_before_ptr_star_trailing     = ignore   # ignore/add/remove/force/not_defined
 
 # Add or remove space before a reference sign '&'.
-sp_before_byref                 = ignore   # ignore/add/remove/force/not_defined
+sp_before_byref                 = remove   # ignore/add/remove/force/not_defined
 
 # Add or remove space before a reference sign '&' that isn't followed by a
 # variable name. If set to ignore, sp_before_byref is used instead.
@@ -1012,7 +1012,7 @@ sp_inside_newop_paren_open      = ignore   # ignore/add/remove/force/not_defined
 sp_inside_newop_paren_close     = ignore   # ignore/add/remove/force/not_defined
 
 # Add or remove space before a trailing comment.
-sp_before_tr_cmt                = ignore   # ignore/add/remove/force/not_defined
+sp_before_tr_cmt                = remove   # ignore/add/remove/force/not_defined
 
 # Number of spaces before a trailing comment.
 sp_num_before_tr_cmt            = 0        # unsigned number
@@ -1100,7 +1100,7 @@ indent_with_tabs                = 1        # unsigned number
 indent_cmt_with_tabs            = false    # true/false
 
 # Whether to indent strings broken by '\' so that they line up.
-indent_align_string             = false    # true/false
+indent_align_string             = true    # true/false
 
 # The number of spaces to indent multi-line XML strings.
 # Requires indent_align_string=true.
@@ -2911,7 +2911,7 @@ cmt_reflow_indent_to_paragraph_start = false    # true/false
 
 # Whether to convert all tabs to spaces in comments. If false, tabs in
 # comments are left alone, unless used for indenting.
-cmt_convert_tab_to_spaces       = false    # true/false
+cmt_convert_tab_to_spaces       = true    # true/false
 
 # Whether to apply changes to multi-line comments, including cmt_width,
 # keyword substitution and leading chars.
