--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,6 @@ protonmail/.config/protonmail/bridge/cache
 protonmail/.config/protonmail/bridge/*.pem
 
 # zsh
+zsh/.config/zsh/.zcompcache
 zsh/.config/zsh/.zcompdump
 zsh/.config/zsh/.zsh_history
