--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,13 +1,20 @@
-# List of plugins
+# Change prefix
+unbind C-b
+set -g prefix C-a
+bind-key C-a send-prefix
+
+# Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
-set -s default-terminal 'tmux-256color'
 
 # dracula customizations
-set -g @dracula-plugins "battery weather time"
+set -g @dracula-plugins "weather time"
 set -g @dracula-show-powerline true
 set -g @dracula-show-fahrenheit false
 set -g @dracula-military-time true
 
 run '.config/tmux/plugins/tpm/tpm'
+
+# Terminal appearance
+set -g default-terminal "tmux-256color"
