Modify tmux powerline config

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -11,8 +11,8 @@ set -g @plugin 'dracula/tmux'
 # dracula customizations
 set -g @dracula-plugins "weather time"
 set -g @dracula-show-powerline true
-set -g @dracula-show-fahrenheit false
-set -g @dracula-military-time true
+set -g @dracula-show-fahrenheit true
+set -g @dracula-military-time false
 
 run '.config/tmux/plugins/tpm/tpm'
 
