Move run line to bottom of tmux.conf

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -14,7 +14,8 @@ set -g @dracula-show-powerline true
 set -g @dracula-show-fahrenheit true
 set -g @dracula-military-time false
 
-run '.config/tmux/plugins/tpm/tpm'
-
 # Terminal appearance
 set -g default-terminal "tmux-256color"
+
+# Keep this line at the very bottom
+run '~/.config/tmux/plugins/tpm/tpm'
