Add vim-like navigation keys for pane

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -8,11 +8,17 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
 
-# dracula customizations
+# Dracula customizations
 set -g @dracula-plugins "weather time"
 set -g @dracula-show-powerline true
 set -g @dracula-show-fahrenheit true
 set -g @dracula-military-time false
+
+# vim-like navigation
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # Terminal appearance
 set -g default-terminal "tmux-256color"
