Change temrinal type to xterm-256color for better compatibility

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -21,7 +21,7 @@ bind k select-pane -U
 bind l select-pane -R
 
 # Terminal appearance
-set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-256color"
 
 # Keep this line at the very bottom
 run '~/.config/tmux/plugins/tpm/tpm'
