--- a/vlc/.config/vlc/vlc-qt-interface.conf
+++ b/vlc/.config/vlc/vlc-qt-interface.conf
@@ -1,6 +1,6 @@
 [General]
 filedialog-path=@Variant(\0\0\0\x11\0\0\0.file:///home/etorres/2022-06-15%2011-44-26.mkv)
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x10\0\0\0\x30\0\0\t\xef\0\0\x5\x8f\0\0\0\x10\0\0\0\x30\0\0\t\xef\0\0\x5\x8f\0\0\0\0\0\0\0\0\n\0\0\0\0\x10\0\0\0\x30\0\0\t\xef\0\0\x5\x8f)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\n\0\0\0*\0\0\x4\xfa\0\0\x5\x95\0\0\0\0\0\0\0\0\0\0\t\xff\0\0\x5\x7f\0\0\0\0\x2\0\0\0\n\0\0\0\0\n\0\0\0*\0\0\x4\xfa\0\0\x5\x95)
 
 [FullScreen]
 pos=@Point(0 0)
@@ -9,7 +9,7 @@ wide=false
 
 [MainWindow]
 adv-controls=0
-bgSize=@Size(2528 1322)
+bgSize=@Size(1265 1332)
 pl-dock-status=true
 playlist-visible=false
 playlistSize=@Size(-1 -1)
@@ -20,5 +20,5 @@ advanced=false
 size=@Size(528 460)
 
 [RecentsMRL]
-list=file:///home/etorres/2022-06-15%2011-44-26.mkv
-times=0
+list=file:///tmp/ark-yAqhGY/00-VideoOfHowToWorkWithSQLDeveloper.mp4, file:///tmp/ark-pcwANV/00-VideoOfHowToWorkWithSQLDeveloper.mp4, file:///home/etorres/2022-06-15%2011-44-26.mkv
+times=259180, 518200, 0
